# langchain_feature_playground

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/plantuml/: architecture.puml
service/: api.py  langchain_huggingface.py  langchain_openai.py  langchain_openai_agent.py  langchain_openai_coversations.py  langchain_openai_documents.py  langchain_openai_interface.py  langchain_type.py  langchain_vectorizer.py
tests/: test_file_upload.py  test_langchain_openai.py
